# AI_Infra_Orchestration

./: .gitignore  DEMO_DAY_PACKAGE.md  README.md  README_ASML_DEMO.md  README_DEMO.md  pyproject.toml
.cursor/skills/ai-infra-external-model-hooks/: SKILL.md
.cursor/skills/ai-infra-lakebase-memory-hooks/: SKILL.md
.cursor/skills/ai-infra-mlflow-tracing-hooks/: SKILL.md
.cursor/skills/ai-infra-vector-search-hooks/: SKILL.md
apps/ai_infra_showcase_app/: app.py  app.yaml  requirements.txt
apps/ai_infra_showcase_app/framework/: lakebase_utils.py  vector_search_utils.py
apps/asml_showcase_app/: app.py  requirements.txt
apps/asml_showcase_app/framework/: __init__.py  fm_agent_utils.py  lakebase_utils.py  mlflow_tracing_utils.py  vector_search_utils.py
docs/: external_connectivity_guidelines.md  mcp_integration.md  mlflow_judging_guidelines.md  observability_tags.md  routing_architecture.md  uc_function_publishing.md
docs/guides/: external-models.md  lakebase-memory.md  mlflow-tracing.md  vector-search.md
framework/: __init__.py  _text_utils.py  dspy_adapter.py  external_model_hooks.py  fm_agent_utils.py  judge_hooks.py  lakebase_utils.py  langgraph_adapter.py  mcp_auth.py  mcp_catalog_utils.py  mcp_client.py  mcp_servers.py  mcp_tool_skill.py  mlflow_tracing_utils.py  openapi_model_adapter.py  reference_skills.py  reference_uc_bindings.py  router.py  skill_registry.py  uc_function_publisher.py  unified_catalog.py  vector_search_utils.py
framework/router/: __init__.py  _composite.py  _core.py  _orchestration.py  _tiers.py
scripts/: bootstrap_ai_infra_resources.py  bootstrap_asml_resources.py  bootstrap_skill_catalog.py  build_assessment_dataset.py  build_eval_dataset.py  generate_ai_infra_synthetic_data.py  generate_asml_synthetic_data.py  run_assessment.py  run_mlflow_eval.py  run_routing_eval.py
tests/: conftest.py
tests/integration/: test_uc_to_mcp_round_trip.py
tests/unit/: test_external_model_hooks.py  test_judges.py  test_mcp_auth.py  test_mcp_catalog.py  test_mcp_client.py  test_mcp_servers.py  test_router.py  test_skill_registry.py  test_text_utils.py  test_tracing_tags.py  test_uc_function_publisher.py  test_unified_catalog.py  test_vector_search_utils.py
